# earhero-tf

./: .dockerignore  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: INFORME.docx  INFORME.md  agente_arquitecto.md  agente_redactor.md  agente_revisor.md  agente_tester.md  coverage.xml
docs/generado/: ARQUITECTURA.md  QA.md
docs/generado/backend/: api.py  models.py
docs/generado/devops/: Dockerfile  docker-compose.yml
docs/generado/frontend/: app.js  index.html  styles.css
frontend/: app.js  index.html  styles.css
src/earhero/: __init__.py  api.py  auth.py  db.py  dificultad.py  models.py  progreso.py  repos.py  tutor.py
tests/functional/: test_api.py  test_ui_playwright.py
tests/unit/: test_auth.py  test_deploy_render.py  test_dificultad.py  test_progreso.py  test_tutor.py
tools/: agents.py  build_app.py  deploy_render.py  ollama_client.py
tools/spec/: 00_proyecto.md  01_arquitectura.md  02_entidades.md  03_estilo.md  04_estructura.md
