[project]
name = "earhero-tf"
version = "1.0.0"
description = "Suite de pruebas automatizadas asistida por IA - EarHero AI (TF)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.6",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "playwright>=1.44",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "functional: pruebas funcionales end-to-end",
]

[tool.coverage.run]
source = ["earhero"]
branch = true
omit = ["*/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = ["if __name__ == .__main__.:", "raise NotImplementedError"]
